# OmniGraph

./: .gitignore  CDNServer.cpp  CDNServer.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  GraphQLEngine.cpp  GraphQLEngine.hpp  HTTPServer.cpp  HTTPServer.hpp  ServiceInyector.hpp  config.json  errors_final.txt  libOmniCore.dylib  libOmniUtils.dylib  main.cpp
GraphQL/: RootMutation.hpp  RootQuery.hpp  schema.graphql  schema_old.graphql
GraphQL/Resolvers/: BaseResolver.hpp
GraphQL/Resolvers/Area/: Query.hpp  Resolver.hpp
GraphQL/Resolvers/Floor/: Query.hpp  Resolver.hpp
GraphQL/Resolvers/Item/: Mutation.hpp  Query.hpp  Resolver.hpp
GraphQL/Resolvers/ItemBrand/: Mutation.hpp  Query.hpp  Resolver.hpp
GraphQL/Resolvers/ItemGroup/: Mutation.hpp  Query.hpp  Resolver.hpp
GraphQL/Resolvers/Session/: AuthPayLoad.hpp  LogoutPayload.hpp  LogoutReasonResolver.hpp  Mutation.hpp
GraphQL/Resolvers/User/: Mutation.hpp  Query.hpp  Resolver.hpp
OmniCore/Base/: BaseCreateDTO.hpp  BaseModel.hpp  BaseUpdateDTO.hpp
OmniCore/Database/: Database.hpp  Datatable.hpp  SQLParams.hpp
OmniCore/GlobalConfiguration/: GlobalConfiguration.hpp
OmniCore/GlobalConfiguration/DTOs/: UpdateGlobalConfiguration.hpp
OmniCore/GlobalConfiguration/Models/: GlobalConfiguration.hpp
OmniCore/GlobalConfiguration/Repositories/: GlobalConfiguration.hpp
OmniCore/Item/: Item.hpp
OmniCore/Item/DTOs/: CreateItem.hpp  GetItem.hpp  SearchItems.hpp  UpdateItem.hpp
OmniCore/Item/Models/: Item.hpp
OmniCore/Item/Repositories/: Item.hpp
OmniCore/ItemBrand/: ItemBrand.hpp
OmniCore/ItemBrand/DTOs/: CreateItemBrand.hpp  GetItemBrand.hpp  UpdateItemBrand.hpp
OmniCore/ItemBrand/Models/: ItemBrand.hpp
OmniCore/ItemBrand/Repositories/: ItemBrand.hpp
OmniCore/ItemGroup/: ItemGroup.hpp
OmniCore/ItemGroup/DTOs/: CreateItemGroup.hpp  GetItemGroup.hpp  UpdateItemGroup.hpp
OmniCore/ItemGroup/Models/: ItemGroup.hpp
OmniCore/ItemGroup/Repositories/: ItemGroup.hpp
OmniCore/Session/: Session.hpp
OmniCore/Session/DTOs/: Login.hpp  Logout.hpp
OmniCore/Session/Enums/: LogoutReason.hpp
OmniCore/Session/Models/: AuthPayload.hpp  LogoutPayload.hpp  Payload.hpp  SessionData.hpp
OmniCore/Session/Repositories/: Session.hpp
OmniCore/User/: User.hpp
OmniCore/User/DTOs/: ChangePassword.hpp  CreateUser.hpp  GetUser.hpp  SearchUsers.hpp  UpdateUser.hpp
OmniCore/User/Enums/: UserFilter.hpp
OmniCore/User/Models/: User.hpp
OmniCore/User/Repositories/: User.hpp
SQLFiles/: OmniDB.sql
_agent/workflows/: install_unix.md
